--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less": "^4.1.1",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-print-nb": "^1.7.4",
     "vue-quill-editor": "^3.0.6",
@@ -22,6 +23,7 @@
     "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
